Se centró el Agregar usuarios

--- a/Nuevo/src/Presentacion/ifrmAltaUsuarios.form
+++ b/Nuevo/src/Presentacion/ifrmAltaUsuarios.form
@@ -159,12 +159,12 @@
                       </Group>
                       <Component id="jPanel2" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblSitioWeb" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtSitioWeb" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="30" max="32767" attributes="0"/>
+                  <EmptySpace pref="18" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
