--- a/Nuevo/src/Presentacion/frmMenuPrincipal.form
+++ b/Nuevo/src/Presentacion/frmMenuPrincipal.form
@@ -51,6 +51,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Nuevo"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miRegServiciosNuevoActionPerformed"/>
+                  </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="miRegServiciosActualizar">
                   <Properties>
