Se agregó el seleccionar categorías

--- a/Nuevo/src/Presentacion/ifrmAltaServicio.form
+++ b/Nuevo/src/Presentacion/ifrmAltaServicio.form
@@ -296,6 +296,9 @@
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
             <Component class="javax.swing.JTree" name="treeCategorias">
+              <Events>
+                <EventHandler event="valueChanged" listener="javax.swing.event.TreeSelectionListener" parameters="javax.swing.event.TreeSelectionEvent" handler="treeCategoriasValueChanged"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
