--- a/Nuevo/src/Presentacion/ifrmActualizarServicio.form
+++ b/Nuevo/src/Presentacion/ifrmActualizarServicio.form
@@ -8,6 +8,9 @@
       </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Actualizar servicio"/>
+    <Property name="toolTipText" type="java.lang.String" value=""/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
